# scancode-toolkit

./: .gitignore  setup.cfg  setup.py
etc/scripts/: json2csv.py  test_json2csv_legacy.py
etc/scripts/testdata/livescan/: expected.csv
src/aboutcode/: django.py
src/commoncode/: __init__.py  codec.py  command.py  date.py  fetch.py  fileset.py  filetype.py  fileutils.py  functional.py  hash.py  ignore.py  misc.py  paths.py  system.py  testcase.py  text.py  timeutils.py  urn.py  version.py
src/formattedcode/: format_csv.py
src/packagedcode/: models.py  npm.py
src/scancode/: __init__.py  api.py  cli.py  config.py  dbconf.py  dbsettings.py  interrupt.py
src/textcode/: pdf.py
tests/commoncode/: test_fileutils.py
tests/formattedcode/data/basic/: expected.json
tests/packagedcode/: test_maven.py  test_nuget.py  test_package_models.py  test_rpm.py
tests/packagedcode/data/maven2/: activemq-camel-pom.xml.package.json  adarwin-1.0.pom.package.json  ant-jai-1.7.0.pom.package.json  ant-jsch-1.7.0.pom.package.json  aopalliance-1.0.pom.package.json  classworlds-1.1-alpha-2.pom.package.json  dbwebx_pom.xml.package.json  easyconf-0.9.0.pom.package.json  fna2_pom.xml.package.json  fna_pom_project.xml.package.json  foo-pom.xml.package.json  gero_pom.xml.package.json  idega_pom.xml.package.json  jrecordbind-2.3.4.pom.package.json  logback-access.pom.package.json  rel_pom.xml.package.json  sea_pom.xml.package.json  specs-1.3.pom.package.json  spring-orm-2.5.3.pom.package.json  spring-webmvc-2.5.3.pom.package.json  (+5 more)
tests/scancode/: test_api.py  test_cli.py  test_config.py
(+505 files in other folders)
