[metadata]
license_file = NOTICE

[aliases]
pypi_release = clean --all sdist --formats=bztar bdist_wheel register upload

release = clean --all sdist --formats=gztar,bztar,zip bdist_wheel

[tool:pytest]
testpaths =
    src
    tests
    etc

norecursedirs =
    .git
    bin
    dist
    build
    _build
    dist
    local
    ci
    docs
    man
    share
    samples
    .cache
    .settings
    Include
    include
    Lib
    lib
    Scripts
    thirdparty
    tmp
    src/*/data
    tests/*/data

python_files = *.py

python_classes=Test
python_functions=test

addopts =
    -rfEsxXw
    --strict
    --ignore docs/conf.py
    --ignore src/aboutcode/django.py
    --ignore setup.py
    --doctest-modules
